--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "serve": "^14.2.4"
   }
 }
